set up HTML page and added 5 questions to questions.js

--- a/index.html
+++ b/index.html
@@ -9,14 +9,25 @@
 
     </head>
     <body>
+        <div class="container border border-primary">
+            <div class="col-md-4 float-left" id="highScores">
+                View High Scores
+            </div>
+            <div class="col-md-4 float-right text-right" id="timer">
+                Timer
+            </div>
+        </div>
         <div class="container">
-            
+            <h1 class="col-md mt-3 text-center">Coding Quiz</h1>
+            <div class="row border border border-primary">
+                <div class="col-md-6 mx-auto text-center" id="questions">the questions go here</div>
+            </div>
+            <div class="row border border-secondary">
+                <div class="col-md-6 mx-auto text-center">
+                    <ul id="answerChoices ">answers go here</ul>
 
-
-
-
-
-
+                </div>
+            </div>
 
         </div>
         
