--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <div class="container border border-secondary">
                         <ul id="answerChoices">answers go here</ul>
                         <div id="answerFeedback"></div>
+                        <button class="btn btn-primary btn-lg" id="next">Next</button>
                     </div>
                     
                 </div>
