finished initials input and pushing saved object into high scores array

--- a/index.html
+++ b/index.html
@@ -49,12 +49,26 @@
                             High Scores:
                           </h3>
                           <ul id="scoreList"></ul>
-                          <div>
-                            <button id="save">Save</button>
-                          </div>
                         </div>
                     </div>
                 </div>
+            <div id="initials-Container" class="initials">
+                <div class="initials-content">
+                    <div class="initials-header">
+                        <span class="close">&times;</span>
+                        <h5 id="initials-instructions">Please enter your initials</h5>
+                    </div>
+                    <div class="intials-body">
+                        <div id="scoreContain">Final Score: <span id="testScore"></span></div>
+                        <textarea id="initials-enter" cols="10" rows="1"></textarea>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary" id="save">Save</button>
+                    </div>
+                </div>
+
+            </div>
+            
         </div>
         
 
